rust_writer_proc/tests/ui/mutator_fails_if_implementor_isnt_clone.stderr
error[E0277]: the trait bound `A: Clone` is not satisfied
  --> tests/ui/mutator_fails_if_implementor_isnt_clone.rs:15:1
   |
15 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, local = A)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `A`
   |
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `A` with `#[derive(Clone)]`
   |
9  + #[derive(Clone)]
10 | struct A {
   |
